k8s/sid_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
#  namespace: clean
  annotations:
    kubernetes.io/ingress.class: nginx # 인그레스도 nginx로 만들어짐
    cert-manager.io/cluster-issuer: letsencrypt-prod # 이 부분을 추가
spec:
  # 아래 tls 부분을 추가!
  tls:
  - hosts:
    - "server.si-d.site"
    secretName: sid-com-tls
  rules:
  - host: server.si-d.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sid-service
            port:
              number: 80 # 서비스 포트를 적어 줘야 한다.
